# file-find-mcp

./: Cargo.toml  README.md
.github/: copilot-instructions.md
src/: main.rs
src/tools/: mod.rs  search_tool.rs
